// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form: Field renders correctly with all props 1`] = `
<div
  className="form-field "
>
  <label
    className="form-field-label"
    htmlFor="field"
  >
    field label
  </label>
  <span
    className="form-field-prefix"
  >
    zar
  </span>
  <input
    className=""
    disabled={false}
    id="field"
    name="field"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="enter your details"
    required={false}
    type="text"
    value="01"
  />
  <span
    className="form-field-postfix"
  >
    zar
  </span>
  <small
    className="form-field-message"
  >
    This is a test message
  </small>
</div>
`;

exports[`Form: Field renders correctly without any props 1`] = `
<div
  className="form-field "
>
  <input
    className=""
    disabled={false}
    onChange={[Function]}
    onKeyDown={[Function]}
    required={false}
    type="text"
  />
</div>
`;
